--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ include_directories(
 	external/glew-1.9.0/include/
 	external/assimp-3.0.1270/include/
 	external/bullet-2.81-rev2613/src/
+	external/soil/src
 	.
 )
 
@@ -55,6 +56,161 @@ add_definitions(
 	-D_CRT_SECURE_NO_WARNINGS
 )
 
+# Tutorial open.gl
+add_executable(open.gl 
+	open.gl/triangle.cpp
+	common/shader.cpp
+	common/shader.hpp
+	
+	open.gl/SimpleFragmentShader.fragmentshader
+	open.gl/SimpleVertexShader.vertexshader
+)
+target_link_libraries(open.gl
+	${ALL_LIBS}
+)
+
+# Xcode and Visual working directories
+set_target_properties(open.gl PROPERTIES XCODE_ATTRIBUTE_CONFIGURATION_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/open.gl/")
+create_target_launcher(open.gl WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/open.gl/")
+create_default_target_launcher(open.gl WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/open.gl/") 
+
+#############################
+# Tutorial open.gl.triangle2
+add_executable(open.gl.triangle2 
+	open.gl.triangle2/triangle.cpp
+	common/shader.cpp
+	common/shader.hpp
+	
+	open.gl.triangle2/SimpleFragmentShader.fragmentshader
+	open.gl.triangle2/SimpleVertexShader.vertexshader
+)
+target_link_libraries(open.gl.triangle2
+	${ALL_LIBS}
+)
+
+# Xcode and Visual working directories
+set_target_properties(open.gl.triangle2 PROPERTIES XCODE_ATTRIBUTE_CONFIGURATION_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.triangle2/")
+create_target_launcher(open.gl.triangle2 WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.triangle2/")
+create_default_target_launcher(open.gl.triangle2 WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.triangle2/") 
+
+#############################
+# Tutorial open.gl.square
+add_executable(open.gl.square 
+	open.gl.square/square.cpp
+	common/shader.cpp
+	common/shader.hpp
+	
+	open.gl.square/SimpleFragmentShader.fragmentshader
+	open.gl.square/SimpleVertexShader.vertexshader
+)
+target_link_libraries(open.gl.square
+	${ALL_LIBS}
+)
+
+# Xcode and Visual working directories
+set_target_properties(open.gl.square PROPERTIES XCODE_ATTRIBUTE_CONFIGURATION_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.square/")
+create_target_launcher(open.gl.square WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.square/")
+create_default_target_launcher(open.gl.square WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.square/") 
+
+
+#############################
+# Tutorial open.gl.texture
+
+add_subdirectory (3rdparty/soil) 
+#add_library(SOIL SHARED open.gl.texture/*.c)
+
+add_executable(open.gl.texture
+	open.gl.texture/gltexture.cpp
+	common/shader.cpp
+	common/shader.hpp
+#	common/texture.cpp
+#	common/texture.hpp
+	
+	open.gl.texture/TransformVertexShader.vertexshader
+	open.gl.texture/TextureFragmentShader.fragmentshader
+)
+
+target_link_libraries(open.gl.texture
+	${ALL_LIBS}
+	SOIL
+#	C:/Users/Chenghai/Downloads/OpenGL-tutorial_v0014_33/OpenGL-tutorial_v0014_33/build/open.gl.texture.dir/Debug/SOIL.lib
+#	C:/Users/Chenghai/Downloads/OpenGL-tutorial_v0014_33/OpenGL-tutorial_v0014_33/3rdparty/soil/projects/VC9/Debug/SOIL.lib
+)
+# Xcode and Visual working directories
+set_target_properties(open.gl.texture PROPERTIES XCODE_ATTRIBUTE_CONFIGURATION_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.texture/")
+create_target_launcher(open.gl.texture WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.texture/")
+
+
+#############################
+# Tutorial open.gl.texture_kitten_puppy
+
+add_executable(open.gl.texture_kitten_puppy
+	open.gl.texture_kitten_puppy/gltexture_kp.cpp
+	common/shader.cpp
+	common/shader.hpp
+#	common/texture.cpp
+#	common/texture.hpp
+	
+	open.gl.texture_kitten_puppy/TransformVertexShader.vertexshader
+	open.gl.texture_kitten_puppy/TextureFragmentShader.fragmentshader
+)
+
+target_link_libraries(open.gl.texture_kitten_puppy
+	${ALL_LIBS}
+	SOIL
+#	C:/Users/Chenghai/Downloads/OpenGL-tutorial_v0014_33/OpenGL-tutorial_v0014_33/build/open.gl.texture_kitten_puppy.dir/Debug/SOIL.lib
+#	C:/Users/Chenghai/Downloads/OpenGL-tutorial_v0014_33/OpenGL-tutorial_v0014_33/3rdparty/soil/projects/VC9/Debug/SOIL.lib
+)
+# Xcode and Visual working directories
+set_target_properties(open.gl.texture_kitten_puppy PROPERTIES XCODE_ATTRIBUTE_CONFIGURATION_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.texture_kitten_puppy/")
+create_target_launcher(open.gl.texture_kitten_puppy WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.texture_kitten_puppy/")
+
+#############################
+# Tutorial open.gl.texture_reflection
+
+add_executable(open.gl.texture_reflection
+	open.gl.texture_reflection/gltexture_reflection.cpp
+	common/shader.cpp
+	common/shader.hpp
+#	common/texture.cpp
+#	common/texture.hpp
+	
+	open.gl.texture_reflection/TransformVertexShader.vertexshader
+	open.gl.texture_reflection/TextureFragmentShader.fragmentshader
+)
+
+target_link_libraries(open.gl.texture_reflection
+	${ALL_LIBS}
+	SOIL
+#	C:/Users/Chenghai/Downloads/OpenGL-tutorial_v0014_33/OpenGL-tutorial_v0014_33/build/open.gl.texture_reflection.dir/Debug/SOIL.lib
+#	C:/Users/Chenghai/Downloads/OpenGL-tutorial_v0014_33/OpenGL-tutorial_v0014_33/3rdparty/soil/projects/VC9/Debug/SOIL.lib
+)
+# Xcode and Visual working directories
+set_target_properties(open.gl.texture_reflection PROPERTIES XCODE_ATTRIBUTE_CONFIGURATION_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.texture_reflection/")
+create_target_launcher(open.gl.texture_reflection WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.texture_reflection/")
+
+#############################
+# Tutorial open.gl.texture_transform1
+
+add_executable(open.gl.texture_transform1
+	open.gl.texture_transform1/gltexture_transform1.cpp
+	common/shader.cpp
+	common/shader.hpp
+	
+	open.gl.texture_transform1/TransformVertexShader.vertexshader
+	open.gl.texture_transform1/TextureFragmentShader.fragmentshader
+)
+
+target_link_libraries(open.gl.texture_transform1
+	${ALL_LIBS}
+	SOIL
+)
+# Xcode and Visual working directories
+set_target_properties(open.gl.texture_transform1 PROPERTIES XCODE_ATTRIBUTE_CONFIGURATION_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.texture_transform1/")
+create_target_launcher(open.gl.texture_transform1 WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.texture_transform1/")
+
+
+#############################
 # Tutorial 1
 add_executable(tutorial01_first_window 
 	tutorial01_first_window/tutorial01.cpp
@@ -667,6 +823,46 @@ add_custom_command(
    TARGET tutorial01_first_window POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/tutorial01_first_window${CMAKE_EXECUTABLE_SUFFIX}" "${CMAKE_CURRENT_SOURCE_DIR}/tutorial01_first_window/"
 )
+
+add_custom_command(
+   TARGET open.gl POST_BUILD
+   COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/open.gl.exe" "${CMAKE_CURRENT_SOURCE_DIR}/open.gl/open.gl.exe"
+)
+
+add_custom_command(
+   TARGET open.gl.triangle POST_BUILD
+   COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/open.gl.triangle.exe" "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.triangle/open.gl.triangle.exe"
+)
+
+
+add_custom_command(
+   TARGET open.gl.square POST_BUILD
+   COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/open.gl.square.exe" "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.square/open.gl.square.exe"
+)
+
+add_custom_command(
+   TARGET open.gl.texture POST_BUILD
+   COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARYG146_DIR}/${CMAKE_CFG_INTDIR}/open.gl.texture${CMAKE_EXECUTABLE_SUFFIX}" "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.texture/"
+)
+
+
+add_custom_command(
+   TARGET open.gl.texture_kitten_puppy POST_BUILD
+   COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/open.gl.texture_kitten_puppy${CMAKE_EXECUTABLE_SUFFIX}" "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.texture_kitten_puppy/"
+)
+
+
+add_custom_command(
+   TARGET open.gl.texture_reflection POST_BUILD
+   COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/open.gl.texture_reflection${CMAKE_EXECUTABLE_SUFFIX}" "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.texture_reflection/"
+)
+
+add_custom_command(
+   TARGET open.gl.texture_transform1 POST_BUILD
+   COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/open.gl.texture_transform1${CMAKE_EXECUTABLE_SUFFIX}" "${CMAKE_CURRENT_SOURCE_DIR}/open.gl.texture_transform1/"
+)
+
+
 add_custom_command(
    TARGET tutorial02_red_triangle POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/tutorial02_red_triangle${CMAKE_EXECUTABLE_SUFFIX}" "${CMAKE_CURRENT_SOURCE_DIR}/tutorial02_red_triangle/"
