master ignore Debug

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@
 build/
 *.exe
 **/*.exe
+3rdparty/soil/projects/VC9/Debug/cl.command.1.tlog
+3rdparty/soil/projects/VC9/Debug/CL.read.1.tlog
+3rdparty/soil/projects/VC9/Debug/CL.write.1.tlog
+3rdparty/soil/projects/VC9/Debug/image_DXT.obj
+3rdparty/soil/projects/VC9/Debug/image_helper.obj
+3rdparty/soil/projects/VC9/Debug/lib.command.1.tlog
+3rdparty/soil/projects/VC9/Debug/Lib-link.read.1.tlog
+3rdparty/soil/projects/VC9/Debug/Lib-link.write.1.tlog
+3rdparty/soil/projects/VC9/Debug/SOIL.Build.CppClean.log
+3rdparty/soil/projects/VC9/Debug/SOIL.lastbuildstate
+3rdparty/soil/projects/VC9/Debug/SOIL.lib
+3rdparty/soil/projects/VC9/Debug/SOIL.log
+3rdparty/soil/projects/VC9/Debug/SOIL.obj
+3rdparty/soil/projects/VC9/Debug/stb_image_aug.obj
+3rdparty/soil/projects/VC9/Debug/vc110.idb
+3rdparty/soil/projects/VC9/Debug/vc110.pdb
